feat: add option to use primary or secondary color on topics

--- a/contract/config.json
+++ b/contract/config.json
@@ -387,6 +387,9 @@
         }, {
           "const": "secondary",
           "title": "couleur secondaire"
+        }, {
+          "const": "primarySecondary",
+          "title": "couleur primaire ou secondaire selon le contexte"
         }]
       },
       "topicsOptions": {
