--- a/contract/config.json
+++ b/contract/config.json
@@ -925,7 +925,7 @@
       "featuredApplication": {
         "title": "Visualisation mise en avant",
         "type": "object",
-        "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner={context.owner}&size=1000",
+        "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner={context.owner}&size=1000{context.featuredVisibilityFilter}",
         "x-itemsProp": "results",
         "x-itemTitle": "title",
         "x-itemKey": "href",
