--- a/contract/config.json
+++ b/contract/config.json
@@ -1156,6 +1156,21 @@
         "x-display": "switch",
         "title": "ne pas recadrer les images dans les vignettes de jeux de données",
         "default": false
+      },
+      "datasetMetaLayout": {
+        "type": "string",
+        "title": "Affichage des métadonnées sur la page d'un jeu de données",
+        "oneOf": [
+          {
+            "title": "Disposition 2/3 - 1/3",
+            "const": "columnsLeftLarger"
+          },
+          {
+            "title": "Vertical",
+            "const": "vertical"
+          }
+        ],
+        "default": false
       }
     }
   }, {
