fix: default value for datasetMetaLayout

--- a/contract/config.json
+++ b/contract/config.json
@@ -1170,7 +1170,7 @@
             "const": "vertical"
           }
         ],
-        "default": false
+        "default": "columnsLeftLarger"
       }
     }
   }, {
