feat: WIP on privacy page to opt out from GA tracking

--- a/contract/config.json
+++ b/contract/config.json
@@ -1523,7 +1523,7 @@
               }
             },
             "anonymized": {
-              "const": "false",
+              "const": false,
               "title": "Système configuré en mode anonyme"
             }
           }
@@ -1544,7 +1544,7 @@
               }
             },
             "anonymized": {
-              "const": "false",
+              "const": false,
               "title": "Système configuré en mode anonyme"
             }
           }
