--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "homepage": "https://gitlab.com/data-fair/portals#readme",
   "dependencies": {
     "@koumoul/nuxt-config-inject": "^0.4.10",
-    "@koumoul/sd-express": "^1.0.0",
+    "@data-fair/sd-express": "^1.3.1",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/i18n": "^7.2.2",
     "ajv": "^6.12.6",
@@ -89,7 +89,7 @@
     "vue-social-sharing": "^3.0.4"
   },
   "devDependencies": {
-    "@data-fair/sd-vue": "2.6.0",
+    "@data-fair/sd-vue": "2.6.1",
     "@koumoul/v-iframe": "^0.20.0",
     "@koumoul/vjsf": "2.20.3",
     "@koumoul/vue-multianalytics": "^1.11.4",
