--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
   },
   "homepage": "https://gitlab.com/data-fair/portals#readme",
   "dependencies": {
-    "@koumoul/nuxt-config-inject": "^0.4.10",
     "@data-fair/sd-express": "^1.3.1",
+    "@koumoul/nuxt-config-inject": "^0.4.10",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/i18n": "^7.2.2",
     "ajv": "^6.12.6",
@@ -62,6 +62,7 @@
     "debug": "^4.3.4",
     "email-validator": "^2.0.4",
     "event-to-promise": "^0.8.0",
+    "express": "^4.18.2",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^8.0.1",
     "google-fonts-complete": "^2.1.1",
