--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - NO_UI=${NO_UI}
       - AUTHRATELIMIT_ATTEMPTS=200
       - SECRET_SITES=secret-sites
-      - MANAGE_SITES=true
+      # - MANAGE_SITES=true
     volumes:
       - ./test/resources/users.json:/webapp/data/users.json
       - ./test/resources/organizations.json:/webapp/data/organizations.json
