--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,43 +4,40 @@ on:
   push:
     branches: [ '*' ]
     tags: [ 'v*.*.*' ]
-  pull_request:
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout git repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     
     # no need to work on a cache here, it is not faster than pulling
     # instead work on moving to some images hosted on ghcr.io, it is the fastest
     - name: Run test dependencies
       run: |
-        NO_UI=true docker-compose --profile test up -d
-        docker ps
+        docker compose pull --quiet
+        NO_UI=true docker compose --profile test up -d --wait
 
     - name: Prepare docker image tags
       id: docker_meta
-      uses: crazy-max/ghaction-docker-meta@v1
+      uses: docker/metadata-action@v4
       with:
         images: ghcr.io/${{ github.repository }} 
-        tag-semver: |
-            {{version}}
-            {{major}}.{{minor}}
-            {{major}}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
       with:
         driver-opts: network=host
 
     - name: Login to Github container registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -53,7 +50,7 @@ jobs:
 
     - name: Build and push docker images
       id: docker_build
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
@@ -63,17 +60,18 @@ jobs:
         network: host
         cache-from: type=gha
         cache-to: type=gha,mode=max
-
+    
     - name: Stop test dependencies
-      run: docker-compose stop
+      run: docker compose stop
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
 
     - name: Send Keel notification to staging-koumoul.com
+      if: github.ref == 'refs/heads/master'
       run: |
         curl -s --fail --show-error -X POST https://keel.admin.staging-koumoul.com/v1/webhooks/native -u ${{ secrets.KEEL_STAGING_USER }}:${{ secrets.KEEL_STAGING_PASSWORD }} -d '{"name": "ghcr.io/${{ github.repository }}", "tag": "${{ steps.docker_meta.outputs.version }}"}'
     - name: Send Keel notification to koumoul.com
+      if: startsWith(github.ref, 'refs/tags/v')
       run: |
         curl -s --fail --show-error -X POST https://keel.admin.koumoul.com/v1/webhooks/native -u ${{ secrets.KEEL_PROD_USER }}:${{ secrets.KEEL_PROD_PASSWORD }} -d '{"name": "ghcr.io/${{ github.repository }}", "tag": "${{ steps.docker_meta.outputs.version }}"}'
-
