--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "rate-limiter-flexible": "^2.4.1",
     "reconnecting-websocket": "^4.4.0",
     "request-ip": "^2.1.3",
-    "sanitize-html": "^2.10.0",
+    "sanitize-html": "^1.27.5",
     "sharp": "^0.31.3",
     "slugify": "^1.4.6",
     "streamsaver": "^2.0.6",
@@ -123,12 +123,16 @@
     "nock": "^13.2.9",
     "number-abbreviate": "^2.0.0",
     "nuxt": "^2.16.3",
-    "nuxt-webpack-optimisations": "^2.2.3",
+    "nuxt-webpack-optimisations": "^2.2.8",
     "scrolling-element": "^1.0.2",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.4.0",
     "vue-observe-visibility": "^1.0.0",
     "vue-tweet-embed": "^2.4.0",
-    "vue-window-size": "0.6.2"
+    "vue-window-size": "0.6.2",
+    "vuetify": "^2.6.14"
+  },
+  "overrides": {
+    "postcss": "8"
   }
 }
