--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev-server": "NODE_ENV=development DEBUG=upgrade* nodemon server",
     "dev-client": "NODE_ENV=development nuxt -p 3039",
     "dev-deps": "docker-compose --profile dev up -d",
+    "dev-zellij": "zellij --layout .zellij.kdl",
     "test": "NODE_ENV=test mocha --exit --bail test/",
     "test-deps": "docker-compose --profile test up -d",
     "build": "nuxt build --standalone",
     "analyze": "nuxt build --analyze",
     "lint": "eslint --ext js,vue --ignore-path .gitignore .",
-    "lint-fix": "eslint --ext js,vue --ignore-path .gitignore --fix ."
+    "lint-fix": "eslint --ext js,vue --ignore-path .gitignore --fix .",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -57,42 +59,43 @@
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
     "cookie-universal-nuxt": "^2.1.5",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.11.7",
     "debounce": "^1.2.0",
     "debug": "^4.3.4",
     "email-validator": "^2.0.4",
     "event-to-promise": "^0.8.0",
     "express": "^4.18.2",
-    "express-fileupload": "^1.2.1",
-    "fs-extra": "^8.0.1",
+    "express-fileupload": "^1.4.0",
+    "fs-extra": "^11.1.1",
     "google-fonts-complete": "^2.1.1",
     "hasha": "^5.2.2",
     "http-errors": "^2.0.0",
     "http-link-header": "^1.1.0",
     "json-schema-defaults": "^0.4.0",
-    "marked": "^0.6.3",
+    "marked": "^4.3.0",
     "memoizee": "^0.4.15",
     "mime-types": "^2.1.35",
     "mongodb": "^4.14.0",
     "multer": "^1.4.2",
     "nanoid": "^3.3.4",
-    "nodemailer": "^6.5.0",
-    "nodemon": "^1.19.3",
-    "nuxt-start": "^2.15.8",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
+    "nuxt-start": "^2.16.3",
     "original-url": "^1.2.3",
     "prom-client": "^14.0.1",
-    "rate-limiter-flexible": "^2.2.1",
+    "rate-limiter-flexible": "^2.4.1",
     "reconnecting-websocket": "^4.4.0",
     "request-ip": "^2.1.3",
-    "run": "^1.4.0",
-    "sanitize-html": "^2.7.2",
-    "sharp": "^0.30.7",
+    "sanitize-html": "^1.27.5",
+    "sharp": "^0.31.3",
     "slugify": "^1.4.6",
     "streamsaver": "^2.0.6",
     "vue-social-sharing": "^3.0.4",
     "web-streams-polyfill": "^3.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.5.0",
+    "@commitlint/config-conventional": "^17.4.4",
     "@data-fair/sd-vue": "2.6.1",
     "@koumoul/v-iframe": "^0.20.1",
     "@koumoul/vjsf": "2.20.3",
@@ -112,19 +115,24 @@
     "eslint-plugin-vue": "^8.5.0",
     "form-data": "^4.0.0",
     "http-proxy-middleware": "^1.0.6",
+    "husky": "^8.0.3",
     "iframe-resizer": "4.0.4",
     "js-file-download": "^0.4.12",
     "mobile-device-detect": "^0.2.3",
     "mocha": "^10.0.0",
     "nock": "^13.2.9",
     "number-abbreviate": "^2.0.0",
-    "nuxt": "^2.15.8",
-    "nuxt-webpack-optimisations": "^2.2.3",
+    "nuxt": "^2.16.3",
+    "nuxt-webpack-optimisations": "^2.2.8",
     "scrolling-element": "^1.0.2",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.4.0",
     "vue-observe-visibility": "^1.0.0",
     "vue-tweet-embed": "^2.4.0",
-    "vue-window-size": "0.6.2"
+    "vue-window-size": "0.6.2",
+    "vuetify": "^2.6.14"
+  },
+  "overrides": {
+    "postcss": "8"
   }
 }
