--- a/contract/config.json
+++ b/contract/config.json
@@ -135,6 +135,12 @@
         "title": "Couleur secondaire",
         "x-display": "color-picker"
       },
+      "tertiaryColor": {
+        "type": "string",
+        "default": "#1E88E5",
+        "title": "Couleur tertiaire",
+        "x-display": "color-picker"
+      },
       "secondaryBackgroundColor": {
         "type": "string",
         "default": "#CFD8DC",
@@ -379,6 +385,9 @@
         }, {
           "const": "secondary",
           "title": "couleur secondaire"
+        }, {
+          "const": "tertiary",
+          "title": "couleur tertiaire"
         }]
       },
       "topicsBackgroundColor": {
@@ -396,7 +405,7 @@
           "title": "couleur secondaire"
         }, {
           "const": "primarySecondary",
-          "title": "couleur primaire ou secondaire selon le contexte"
+          "title": "couleur principale ou secondaire selon le contexte"
         }]
       }
     }
@@ -1037,6 +1046,42 @@
         "default": false,
         "x-props": {"hideDetails": "auto"}
       },
+      "homeLinksPosition": {
+        "title": "Position des liens sur la page d'accueil",
+        "x-if": "homeShowLinks",
+        "type": "string",
+        "default": "belowKpi",
+        "oneOf": [{
+          "title": "sous la description et les chiffres clés",
+          "const": "belowKpi"
+        }, {
+          "title": "sous la bannière",
+          "const": "belowBanner"
+        }]
+      },
+      "homeLinksOptions": {
+        "title": "Options de l'affichage des liens sur la page d'accueil",
+        "type": "array",
+        "x-if": "homeShowLinks",
+        "x-props": {"hideDetails": "auto"},
+        "items": {
+          "type": "string",
+          "oneOf": [{
+            "const": "outlined",
+            "title": "afficher un contour"
+          }, {
+            "const": "rounded",
+            "title": "arrondir"
+          }, {
+            "const": "elevate",
+            "title": "élèver (applique l'élévation par défaut de votre configuration)"
+          }, {
+            "const": "reverseColor",
+            "title": "inverser la couleur de fond et de texte"
+          }]
+        },
+        "default": ["outlined", "elevate"]
+      },
       "homeLinks": {
         "title": "Liste de liens",
         "type": "array",
@@ -1068,29 +1113,6 @@
             "linkTitle": {"type": "string", "title": "Titre long", "description": "un titre plus long qui ne sera pas affiché directement mais visible au survol et utilisé par les outils d'accessibilité"}
           }
         }
-      },
-      "homeLinksOptions": {
-        "title": "Options de l'affichage des liens sur la page d'accueil",
-        "type": "array",
-        "x-if": "homeShowLinks",
-        "x-props": {"hideDetails": "auto"},
-        "items": {
-          "type": "string",
-          "oneOf": [{
-            "const": "outlined",
-            "title": "afficher un contour"
-          }, {
-            "const": "rounded",
-            "title": "arrondir"
-          }, {
-            "const": "elevate",
-            "title": "élèver (applique l'élévation par défaut de votre configuration)"
-          }, {
-            "const": "reverseColor",
-            "title": "inverser la couleur de fond et de texte"
-          }]
-        },
-        "default": ["outlined", "elevate"]
       }
     }
   }, {
