--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     profiles:
       - dev
       - test
-    image: ghcr.io/data-fair/simple-directory:master
+    image: ghcr.io/data-fair/simple-directory:partners
     network_mode: host
     environment:
       - ADMINS=["superadmin@test.com"]
@@ -18,9 +18,11 @@ services:
       - AUTHRATELIMIT_ATTEMPTS=200
       - SECRET_SITES=secret-sites
       # - MANAGE_SITES=true
+      - MANAGE_PARTNERS=true
     volumes:
       - ./test/resources/users.json:/webapp/data/users.json
       - ./test/resources/organizations.json:/webapp/data/organizations.json
+      - ./data/sd-security:/webapp/security/
 
   notify:
     profiles:
@@ -39,7 +41,7 @@ services:
   data-fair:
     profiles:
       - dev
-    image: ghcr.io/data-fair/data-fair:master
+    image: ghcr.io/data-fair/data-fair:partners
     restart: on-failure:10
     network_mode: host
     environment:
