feat: work on org switch in personal space

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     profiles:
       - dev
       - test
-    image: ghcr.io/data-fair/simple-directory:partners
+    image: ghcr.io/data-fair/simple-directory:partners2
     network_mode: host
     environment:
       - ADMINS=["superadmin@test.com"]
