--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "http-errors": "^2.0.0",
     "http-link-header": "^1.1.0",
     "json-schema-defaults": "^0.4.0",
+    "json-schema-ref-parser": "^9.0.9",
     "marked": "^4.3.0",
     "memoizee": "^0.4.15",
     "mime-types": "^2.1.35",
