fix: missing slug in featured applications

--- a/contract/config.json
+++ b/contract/config.json
@@ -801,6 +801,9 @@
           },
           "id": {
             "type": "string"
+          },
+          "slug": {
+            "type": "string"
           }
         }
       },
@@ -975,6 +978,9 @@
             "type": "string"
           },
           "id": {
+            "type": "string"
+          },
+          "slug": {
             "type": "string"
           }
         }
