feat: can use tertiary color in footer

--- a/contract/config.json
+++ b/contract/config.json
@@ -585,6 +585,9 @@
           "const": "secondary",
           "title": "couleur secondaire"
         }, {
+          "const": "tertiary",
+          "title": "couleur tertiaire"
+        }, {
           "const": "grey",
           "title": "gris foncé"
         }, {
